Changed simple thread page border radius. Fix CSS bug with left pane being too small when a post have larg text content

--- a/static/css.css
+++ b/static/css.css
@@ -125,6 +125,7 @@ body *, a {
 
 .leftPane {
     flex-grow: 1;
+    width: 75%;
     
     animation-name: fadeIn;
     animation-duration: 0.5s;
